Add description to SeismicWaveAbility